--- a/src/main/resources/templates/books/book_form.html
+++ b/src/main/resources/templates/books/book_form.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Book form</title>
+    <title>[[${pageTitle}]]</title>
   <style>
     .form {
       display: flex;
@@ -16,19 +16,20 @@
   </style>
 </head>
 <body>
-  <h1>Add new book</h1>
+  <h1>[[${pageTitle}]]</h1>
   <form th:action="@{/books/save}" method="post" th:object="${book}" class="form">
+    <input type="hidden" th:field="*{id}" />
     <label for="title">Title</label>
     <input type="text" th:field="*{title}" id="title" name="title" required />
     <label for="author">Author</label>
-    <select th:field="*{authorId}" id="author">
+    <select th:field="*{authorId}" id="author" required>
       <option
               th:each="author : ${authors}"
               th:value="${author.id}"
               th:text="${author.firstName} + ' ' + ${author.lastName}"></option>
     </select>
     <label for="category">Category</label>
-    <select th:field="*{categoryId}" id="category">
+    <select th:field="*{categoryId}" id="category" required>
       <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
     </select>
     <label for="date">Publication date</label>
