--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Library</title>
+    <title>Title</title>
     <style>
+        .button-link {
+            background: none;
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+            font-size: 1em;
+            font-family: serif;
+            border: rebeccapurple 1px solid;
+            padding: 10px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
-    <h1>Library</h1>
-    <h2>Books</h2>
-    <a th:href="@{/books}">Book list</a>
+<h1>Welcome to the library</h1>
+<a class="button-link" href="/librarian">I am a librarian</a>
+<a class="button-link" href="/client">I am a client</a>
 </body>
 </html>
