add book lending number to date search

--- a/src/main/resources/templates/lendings/lendings.html
+++ b/src/main/resources/templates/lendings/lendings.html
@@ -29,6 +29,8 @@
     <input type="date" th:name="endDate" id="endDate">
     <button type="submit">Search</button>
 </form>
+<h3>Number of book lendings found</h3>
+<span th:text="${lendingsCount}"></span>
 <table>
     <thead>
     <tr>
